--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEGUNDA -->
-                12/06 
+                19/06 
               </a>
             </h3>
             <p>
@@ -64,13 +64,13 @@
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> CALABRESA E ACEBOLADA </li> -->
               <!-- <li> COSTELA ASSADA DE FORNO </li> -->
-              <li> COSTELA AO MOLHO </li>
+              <!-- <li> COSTELA AO MOLHO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> FEIJOADA </li> -->
-              <li> FILE DE FRANGO </li>
+              <!-- <li> FILE DE FRANGO </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO ASSADO </li> -->
               <!-- <li> FIGADO ACEBOLADO</li> -->
@@ -79,7 +79,7 @@
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
-              <!-- <li> FRANGO COM BATATAS </li> -->
+              <li> FRANGO XADREZ </li>
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> GUISADINHO SUÍNO </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
@@ -97,6 +97,7 @@
               <!-- <li> PIRARUCU A MILANESA </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
               <!-- <li> ESTROGONOFE DE CARNE </li> -->
+              <li> VACA ATOLADA </li>
               <!-- <li> REFRIGERANTE </li> -->
               <li> SUCO </li>
             </ul>
@@ -114,10 +115,11 @@
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> MINGAU DE MUNGUNZA </li> -->
+              <li> MINGAU DE BANANA </li>
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <li> PIT STOP </li>
+              <!-- <li> PIT STOP </li> -->
               <!-- <li> SALGADO </li> -->
               <!-- <li> PIZZA </li> -->
               <!-- <li> X SALADA </li> -->
@@ -132,10 +134,8 @@
             </a>
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
-
                 <!-- TERÇA -->
-                13/06
-
+                20/06
               </a>
             </h3>
             <p>
@@ -146,10 +146,11 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
+              <li> BATATA DOCE </li>
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <li> OVO FRITO </li>
+              <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
@@ -175,6 +176,7 @@
               <!-- <li> COZIDÃO MANAUARA </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
+              <li> ESCONDIDINHO DE CARNE </li>
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
@@ -186,7 +188,7 @@
               <!-- <li> FRANGO FRITO </li> -->
               <li> FRANGO GUISADO COM BATATAS</li>
               <!-- <li> GUISADO DE CARNE </li> -->
-              <li> ISCA DE CALABRESA </li>
+              <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
@@ -219,13 +221,13 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
-              <!-- <li> MISTO QUENTE </li> -->
+              <li> MISTO QUENTE </li>
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO QUENTE </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
-              <li> MINGAU DE MUNGUNZÁ </li>
+              <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
               <!-- <li> X SALADA </li> -->
             </ul>
             </p>
@@ -239,7 +241,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUARTA -->
-                14/06
+                21/06
 
               </a>
             </h3>
@@ -255,7 +257,7 @@
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> MACAXEIRA COZIDA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
-              <!-- <li> OVO COZIDO </li>; -->
+              <li> OVO COZIDO </li>;
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PATÊ DE SARDINHA </li> -->
@@ -264,7 +266,7 @@
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> PÃO COM QUEIJO QUENTE </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
-              <li> SALSICHA AO MOLHO </li>
+              <!-- <li> SALSICHA AO MOLHO </li> -->
               <!-- <li> SOPA </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
             </ul>
@@ -291,7 +293,7 @@
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO A DORE </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
-              <li> FRANGO FRITO </li>
+              <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> FRANGO GUISADO COM BATATAS</li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
@@ -310,6 +312,7 @@
               <!-- <li> PANQUECA </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <li> PICADINHO RICO </li>
+              <li> PIRARUCU A MILANESA </li>
               <!-- <li> REFRIGERANTE </li> -->
               <!-- <li> SUÍNO </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
@@ -335,11 +338,11 @@
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <!-- <li> SALGADO </li> -->
+              <li> SALGADO </li>
               <!-- <li> SALADA DE FRUTA </li> -->
               <!-- <li> MINGAU DE BANANA </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
-              <li> MISTO QUENTE </li>
+              <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> X SALADA </li> -->
               <!-- <li> X BURGUER </li> -->
               <!-- <li> SALADA FRUTA </li> -->
@@ -355,7 +358,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUINTA -->
-                15/06
+                22/06
 
               </a>
             </h3>
@@ -367,10 +370,10 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BATATA DOCE </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
               <!-- <li> FRUTAS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
-              <!-- <li> FRUTAS </li> -->
+              <li> FRUTAS </li>
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
@@ -394,7 +397,7 @@
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
-              <li> CARNE GUISADA </li>
+              <!-- <li> CARNE GUISADA </li> -->
               <!-- <li> CARNE DESFIADA COM LEGUMES </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
@@ -407,7 +410,7 @@
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO ASSADO DE FORNO</li> -->
               <!-- <li> FRANGO DESFIADO COM LEGUMES</li> -->
-              <!-- <li> FRANGO FRITO </li> -->
+              <li> FRANGO FRITO </li>
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> GUISADINHO SUÍNO </li> -->
@@ -417,10 +420,11 @@
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
-              <li> LASANHA DE FRANGO </li>
+              <!-- <li> LASANHA DE FRANGO </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> LINGUA AO MOLHO </li> -->
               <!-- <li> OVO FRITO </li> -->
+              <li> OMELETE DE FORNO </li>
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PEITO DE FRANGO </li> -->
@@ -439,12 +443,12 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <li> AÇAÍ COM FARINHA DE TAPIOCA </li>
+              <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
               <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
-              <!-- <li> BOLO </li> -->
+              <li> BOLO </li>
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
@@ -472,7 +476,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEXTA -->
-                16/06
+                23/06
 
               </a>
             </h3>
@@ -485,14 +489,14 @@
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
-              <!-- <li> FAROFA DE CHARQUE </li> -->
+              <li> FAROFA DE CHARQUE </li>
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
-              <li> QUEIJO E PRESUNTO </li>
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
 
@@ -507,7 +511,7 @@
               <!-- <li> ASSADO DE PANELA </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
-              <!-- <li> CARNE AO MOLHO </li> -->
+              <li> CARNE AO MOLHO </li>
               <!-- <li> CARNE ASSADA </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> COSTELA AO MOLHO PEIXE</li> -->
@@ -517,11 +521,11 @@
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> ESCONDIDINHO DE FRANGO </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
-              <li> FEIJOADA </li>
+              <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <li> FRANGO ASSADO </li>
+              <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
@@ -533,7 +537,7 @@
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
-              <!-- <li> MACARRONADA DE CAMARÃO </li> -->
+              <li> MACARRONADA DE CAMARÃO </li>
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
@@ -561,9 +565,9 @@
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
-              <!-- <li> PIZZA </li> -->
+              <li> PIZZA </li>
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <li> SALGADO </li>
+              <!-- <li> SALGADO </li> -->
               <!-- <li> SALADA DE FRUTA </li> -->
               <!-- <li> X SALADA </li> -->
             </ul>
@@ -578,7 +582,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SÁBADO -->
-                17/06
+                24/06
 
               </a>
             </h3>
@@ -599,11 +603,11 @@
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
-              <!-- <li> SOPA </li> -->
+              <li> SOPA </li>
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> SALSICHA AO MOLHO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
-              <li> TAPIOCA </li>
+              <!-- <li> TAPIOCA </li> -->
             </ul>
             </p></br>
             <p>
@@ -613,7 +617,7 @@
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> BISTECA SUÍNA </li> -->
-              <li> CARNE AO MOLHO </li>
+              <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
@@ -623,12 +627,12 @@
               <!-- <li> FILE DE FRANGO AO MOLHO </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <!-- <li> FRANGO ASSADO </li> -->
+              <li> FRANGO ASSADO </li>
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
-              <!-- <li> ISCA DE CALABRESA </li> -->
+              <li> ISCA DE CALABRESA </li>
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
@@ -636,7 +640,7 @@
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
-              <li> OMELETE  </li>
+              <!-- <li> OMELETE  </li> -->
               <!-- <li> PANQUECAS </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
@@ -661,7 +665,7 @@
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
-              <li> PÃO COM OVO E QUEIJO </li>
+              <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO </li> -->
               <!-- <li> PÃO COM OVO </li> -->
               <!-- <li> PASTEL </li> -->
@@ -669,6 +673,7 @@
               <!-- <li> SALGADO </li> -->
               <!-- <li> X SALADA </li> -->
               <!-- <li> VITAMINADA </li> -->
+              <li> TAPIOCA </li>
             </ul>
             </p>
           </div>
@@ -682,7 +687,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DOMINGO -->
-                18/06
+                25/06
 
               </a>
             </h3>
@@ -696,8 +701,8 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
-              <li> OVO COZIDO </li>
-              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> OVO COZIDO </li> -->
+              <li> OVO FRITO </li>
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
@@ -719,7 +724,7 @@
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CARNE GUISADA COM BATATAS </li> -->
               <!-- <li> CARNE GUISADA </li> -->
-              <!-- <li> CARNE CPM LEGUMES </li> -->
+              <li> CARNE GUISADA COM LEGUMES </li>
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
@@ -727,17 +732,17 @@
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO </li> -->
-              <li> FIGADO ACEBOLADO </li>
+              <!-- <li> FIGADO ACEBOLADO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO ASSADO DE FORNO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
-              <li> FRANGO FRITO </li>
+              <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
-              <!-- <li> ISCA DE FIGADO </li> -->
+              <li> ISCA DE FIGADO </li>
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
@@ -763,9 +768,9 @@
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
-              <li> FAROFA DE OVO </li>
+              <!-- <li> FAROFA DE OVO </li> -->
               <!-- <li> KIKÃO </li> -->
-              <!-- <li> MISTO QUENTE </li> -->
+              <li> MISTO QUENTE </li>
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO E PRESUNTO</li> -->
               <!-- <li> PÃO COM QUEIJO, PRESUNTO E OVO </li> -->
